--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "react-valores",
+  "name": "react-pokedex",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.50.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
